--- a/template/registro.html
+++ b/template/registro.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div class="container">  
-        <p class="logo">Clases en linea</p>
+        <a href="../index.html"><p class="logo">Clases en linea</p></a>
         <nav>
           <a href="../index.html#somos-proya">Quienes somos</a>
           <a href="../index.html#nuestros-programas">Nuestros Programas</a>
@@ -52,6 +52,9 @@
         <br><br>
     </div>
     <footer>
+      <div class="iconos">
+
+      </div>
       <div class="container">
           <p>&copy; Codo a Codo 2023</p>
       </div>
