se agraga titulo tr., resp reg. y valid form

--- a/style.css
+++ b/style.css
@@ -92,6 +92,14 @@ header a:hover{
     color: blueviolet;
 }
 
+.titulo {
+    color: blueviolet;
+}
+
+.titulo:hover{
+    color: rgb(0, 0, 0);
+}
+
 #hero{
     display: flex;
     align-items: center;
