--- a/template/login.html
+++ b/template/login.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div class="container">
-        <p class="logo">Clases en linea</p>
+        <p class="logo"><a href="../index.html" class="titulo">Clases en linea</a></p>
         <nav>
           <a href="../index.html#somos-proya">Quienes somos</a>
           <a href="../index.html#nuestros-programas">Nuestros Programas</a>
