--- a/template/registro.html
+++ b/template/registro.html
@@ -23,14 +23,14 @@
     <h1 class="titulo__form">Formulario de registro</h1>
 
 
-    <form id="formulario" onsubmit="return validarFormulario()" action="https://formspree.io/f/xvojdbzq" method="post">
-      <label for="nombre">Primer Nombre:</label>
+    <form id="formulario" onsubmit="return validarFormulario()" action="https://formspree.io/f/xvojdbzq" method="post" target="_blank">
+      <label for="nombre">Primer Nombre</label>
       <input type="text" id="nombre" name="nombre"><br>
 
-      <label for="dni">DNI:</label>
+      <label for="dni">DNI</label>
       <input type="text" id="dni" name="dni"><br>
 
-      <label for="direccion">Dirección:</label>
+      <label for="direccion">Dirección</label>
       <input type="text" id="direccion" name="direccion"><br>
 
       <input type="submit" value="Enviar">
